# cmake_minimum_required(VERSION <specify CMake version here>)
project(Lab1___Introduction)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lab1___Introduction HW.cpp)
add_executable(HW HW.cpp)
add_executable(AreaOfCircle AreaOfCircle.cpp)
add_executable(IfElseStatements IfElseStatements.cpp)
add_executable(WhileLoop WhileLoop.cpp)
add_executable(ForLoop ForLoop.cpp)
add_executable(CountingWords CountingWords.cpp)
add_executable(CountingLetters CountingLetters.cpp)
add_executable(WordOccurences WordOccurences.cpp)
add_executable(RunLengthEncoder RunLengthEncoder.cpp)
add_executable(FindPrimeNumbers FindPrimeNumbers.cpp)
add_executable(StringManip StringManip.cpp)