cmake_minimum_required(VERSION 3.9)
project(Lab8___Abstract_Classes)

set(CMAKE_CXX_STANDARD 11)


add_executable(ADTs ADTs.cpp)
add_executable(intSort intSort.cpp)
add_executable(sortingCircles sortingCircles.cpp)
add_executable(StringCompareTest StringCompareTest.cpp)
add_executable(sortingParticipants sortingParticipants.cpp)
add_executable(sortingByAttribute sortingByAttribute.cpp)